--- a/StoreWebApp/package.json
+++ b/StoreWebApp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha -R tap",
-    "postinstall": "./node_modules/.bin/bower install"
+    "postinstall": "./node_modules/.bin/bower install --allow-root"
   },
   "directories": {
     "test": "test"
